<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textMyNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="@font/harry_potter_font"
        android:includeFontPadding="false"
        android:text="@string/my_notes"
        android:textColor="@color/white"
        android:textSize="28sp"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/layoutSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_search"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/textMyNotes">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_search"
            app:tint="@color/SearchIcon" />

        <EditText
            android:id="@+id/inputSearch"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="30dp"
            android:background="@null"
            android:fontFamily="@font/harry_potter_font"
            android:hint="@string/type"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="text"
            android:textColor="@color/white"
            android:textColorHint="@color/colorTextHint"
            android:textSize="40sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/notesRecyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:clipToPadding="false"
        android:paddingStart="0dp"
        android:paddingEnd="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutSearch" />


    <ImageView
        android:id="@+id/imageAddNoteMain"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/colorPrimary" />
</androidx.constraintlayout.widget.ConstraintLayout>