<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="40dp"
        android:clipToPadding="false"
        android:paddingBottom="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/activeConstraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true">

            <ImageView
                android:id="@+id/imageBack"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="6dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="12dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorIcons" />

            <ImageView
                android:id="@+id/imageSave"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginEnd="12dp"
                android:background="@drawable/background_done_button"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/ic_done"
                app:layout_constraintBottom_toBottomOf="@id/imageBack"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/imageBack"
                app:tint="@color/colorIcons" />

            <EditText
                android:id="@+id/inputNoteTitle"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="15dp"
                android:background="@null"
                android:fontFamily="@font/harry_potter_font"
                android:hint="@string/title"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="text"
                android:textColor="@color/white"
                android:textColorHint="#9E9E9E"
                android:textSize="20sp"
                app:layout_constraintTop_toBottomOf="@id/imageBack"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/textDateTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/harry_potter_font"
                android:includeFontPadding="false"
                android:textColor="@color/colorIcons"
                android:textSize="10sp"
                app:layout_constraintEnd_toEndOf="@+id/inputNoteTitle"
                app:layout_constraintStart_toStartOf="@+id/inputNoteTitle"
                app:layout_constraintTop_toBottomOf="@+id/inputNoteTitle"
                tools:ignore="SmallSp" />

            <EditText
                android:id="@+id/inputNoteSubtitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:background="@null"
                android:fontFamily="@font/harry_potter_font"
                android:hint="@string/note_subtitle"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textColor="@color/colorTextSubtitle"
                android:textColorHint="#9E9E9E"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/viewSubtitleIndicator"
                app:layout_constraintTop_toBottomOf="@id/inputNoteTitle" />

            <View
                android:id="@+id/viewSubtitleIndicator"
                android:layout_width="5dp"
                android:layout_height="0dp"
                android:layout_marginStart="12dp"
                android:background="@drawable/background_subtitle_indicator"
                app:layout_constraintBottom_toBottomOf="@id/inputNoteSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/inputNoteSubtitle" />

            <ImageView
                android:id="@+id/selectedImage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:scaleType="centerInside"
                android:layout_marginTop="15dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="15dp"
                android:contentDescription="@string/app_name"
                app:layout_constraintTop_toBottomOf="@id/inputNoteSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:visibility="visible" />


            <!-- ImageView for removing the image -->
            <!-- ImageView for removing the image -->
            <ImageView
                android:id="@+id/imageRemoveImage"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/background_delete"
                android:contentDescription="@string/app_name"
                android:padding="4dp"
                android:src="@drawable/ic_delete"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="@+id/selectedImage"
                app:layout_constraintTop_toTopOf="@+id/selectedImage"
                app:tint="@color/white" />



            <LinearLayout
                android:id="@+id/layoutWebURL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="12dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/selectedImage"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/textWebURL"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="web"
                    android:fontFamily="@font/harry_potter_font"
                    android:includeFontPadding="false"
                    android:textSize="13sp" />

                <ImageView
                    android:id="@+id/imageRemoveWebURL"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_delete"
                    app:tint="@color/colorDelete" />

            </LinearLayout>

            <EditText
                android:id="@+id/inputNoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/give_text_hint"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="@null"
                android:fontFamily="@font/harry_potter_font"
                android:gravity="top"
                android:importantForAutofill="no"
                android:includeFontPadding="false"
                android:inputType="textMultiLine"
                android:minHeight="100dp"
                android:textColor="@color/white"
                android:textColorHint="#9E9E9E"
                android:textSize="13sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutWebURL"
                tools:layout_editor_absoluteX="16dp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <include layout="@layout/layout_miscellaneous" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
